fix: click does not work on iOS

--- a/src/nodejs/styles/tailwind.css
+++ b/src/nodejs/styles/tailwind.css
@@ -111,6 +111,7 @@
 
     .content-empty {
         content: "";
+        pointer-events: none;
     }
 
     /* Flex shortcuts */
